Add directory adding, pictures, more features, idk

--- a/v2/electron/page-app/index.html
+++ b/v2/electron/page-app/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Mentron</title>
+    <title>Nimbus</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./cdn/prism.min.css">
     <link rel="stylesheet" href="./page.css">
@@ -39,10 +39,32 @@
         <button id="promptCancel">Cancel</button>
     </div>
 
-    <div id="shade"></div> 
+    <div id="shade"></div>
 
     <div id="terminal">
         <span id="terminalLabel">TERMINAL</span>
+    </div>
+
+    <div id="welcomePannel">
+        <h1>Nimbus</h1>
+        <p>An Electron powered IDE</p>
+        <br><br>
+        <p style="color: black; font-weight: 600;">Begin</p>
+        <a>
+            <img src="./newFile2.png" alt="newFile" height="25px" width="25px" class="middle">
+            <span class="middle">New File (ctrl + n)</span>
+        </a>
+        <br>
+        <a id="openFileLabel">
+            <img src="./openFile2.png" alt="openFile" height="25px" width="25px" class="middle">
+            <span class="middle">Open File (ctrl + o)</span>
+        </a>
+        <br>
+        <a id="openFolderLabel">
+            <img src="./openFolder2.png" alt="openFile" height="30px" width="25px" class="middle">
+            <span class="middle">Open Folder</span>
+        </a>
+
     </div>
 
     <script src="./cdn/prism.min.js"></script>
