--- a/v2/electron/page-app/loader.html
+++ b/v2/electron/page-app/loader.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentron - Loading</title>
+    <title>Nimbus - Loading</title>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Inter");
 
@@ -34,7 +34,7 @@
 
 <body>
     <div id="container">
-        <h1 style="font-size: 24px; transition: .5s;">Loading Mentron...</h1>
+        <h1 style="font-size: 24px; transition: .5s;">Loading Nimbus...</h1>
         <p id="search" id="font-size: 14px;">Searching for updates...</p>
     </div>
 
