add more shortcuts

--- a/v2/electron/page-app/index.html
+++ b/v2/electron/page-app/index.html
@@ -62,7 +62,7 @@
         <br>
         <a id="openFolderLabel">
             <img src="./openFolder2.png" alt="openFile" height="30px" width="25px" class="middle">
-            <span class="middle">Open Folder</span>
+            <span class="middle">Open Folder (ctrl + shift + o)</span>
         </a>
 
     </div>
