--- a/v2/electron/page-app/index.html
+++ b/v2/electron/page-app/index.html
@@ -17,7 +17,14 @@
         <button class="topbarBtn" id="closeXWindow">X</button>
     </div>
     <div id="fileTab">
-
+        <div class="fileBtn" style="width: 100px">
+            <span class="fileBtnContent">
+                <span class="file-type ftype-${fname}">N</span>
+                <span class="file-name">
+                    <em>Welcome</em>
+                </span>
+            </span>
+        </div>
         <span id="createFileBtn">+</span>
     </div>
     <div id="codeContainer" style="display: none">
