--- a/v2/electron/page-app/index.html
+++ b/v2/electron/page-app/index.html
@@ -75,6 +75,7 @@
     </div>
 
     <script src="./cdn/prism.min.js"></script>
+    <script src="./cache.js"></script>
     <script src="./tabmanager.js"></script>
     <script src="./filemanager.js"></script>
 
