--- a/page-app/loader.html
+++ b/page-app/loader.html
@@ -13,6 +13,7 @@
             font-family: 'Inter', sans-serif;
             -webkit-user-select: none;
             -webkit-app-region: drag;
+            background-image: url("./sky.webp");
         }
 
         ::selection {
@@ -22,11 +23,30 @@
         #container {
             position: fixed;
             left: 50%;
-            top: 60%;
+            top: 50%;
             width: 100%;
             height: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
+            transition: .5s;
+        }
+
+        #progressBar {
+            width: 90%;
+            background-color: lightgray;
+            height: 30px;
+            left: 50%;
+            position: absolute;
+            transform: translate(-50%, 0%);
+            border-radius: 5px;
+            overflow: hidden;
+            margin-top: 10px;
+        }
+
+        #progress {
+            width: 2%;
+            background-color: rgb(51, 174, 245);
+            height: 100%;
             transition: .5s;
         }
     </style>
@@ -34,36 +54,38 @@
 
 <body>
     <div id="container">
-        <h1 style="font-size: 24px; transition: .5s;">Loading Nimbus...</h1>
-        <p id="search" id="font-size: 14px;">Searching for updates...</p>
-    </div>
+        <h1 style="font-size: 24px; transition: .5s;">Nimbus</h1>
+        <p id="search" id="font-size: 14px;">Searching for updates</p>
 
-    <script>
+        <div id="progressBar">
+            <div id="progress"></div>
+        </div>
+    </div>
+    <span style="position: fixed; right: 1%; bottom: 1%;">v1.0.0</span>
+
+    <script defer>
 
 
         (async () => {
-
-            const inter = setInterval(a, 1000)
-
-            function a() {
-                document.querySelector("h1").style.scale = 1.1;
-                setTimeout(() => document.querySelector("h1").style.scale = 1.0, 500)
-            }
-
-            a();
-
-            //await fetch('updateCheckerLinkIdk')
-
-            // Coming Later
+            // Update Checking Coming Later
 
             setTimeout(async () => {
-                clearInterval(inter);
-                const { ipcRenderer } = require("electron");
-                await ipcRenderer.invoke("openMain");
 
-                const remote = require("@electron/remote")
-                remote.getCurrentWindow().close();
-            }, 2000)
+                document.getElementById("progress").style.width = "50%"
+
+                setTimeout(async () => {
+                    document.getElementById("progress").style.width = "100%"
+
+                    setTimeout(async () => {
+                        const { ipcRenderer } = require("electron");
+                        await ipcRenderer.invoke("openMain");
+
+                        const remote = require("@electron/remote")
+                        remote.getCurrentWindow().close();
+                    }, 400)
+
+                }, 1000)
+            }, 500)
         })()
     </script>
 </body>
