--- a/page-app/index.html
+++ b/page-app/index.html
@@ -12,6 +12,11 @@
 
 <body>
     <div class="window-topbar">
+
+        <button class="topbarBtn tpbFile" id="file">File</button>
+        <button class="topbarBtn tpbFile" id="edit">Edit</button>
+        <button class="topbarBtn tpbFile" id="terminalBtn">Terminal</button>
+
         <button class="topbarBtn" id="minimizeWindow">🗕</button>
         <button class="topbarBtn" id="maximizeWindow">🗖</button>
         <button class="topbarBtn" id="closeXWindow">X</button>
@@ -75,6 +80,7 @@
     </div>
 
     <script src="./cdn/prism.min.js"></script>
+    <script src="./error-handler.js"></script>
     <script src="./cache.js"></script>
     <script src="./tabmanager.js"></script>
     <script src="./filemanager.js"></script>
