--- a/src/page-app/index.html
+++ b/src/page-app/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./ftypes.css">
     <link rel="stylesheet" href="../node_modules/xterm/css/xterm.css">
     <script src="../node_modules/xterm/lib/xterm.js"></script>
+
+    <script src="./cdn/syntaxhighlight.js"></script>
+    <link rel="stylesheet" href="./cdn/syntaxhighlight.css">
 </head>
 
 <body>
